--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="ringo.ico">
+  <meta name="description" content="Marketing Resume">
+  <meta name="author" content="Abrow136">
 
-  <title>John Doe - Business Administration</title>
+  <title>Amiko Brown - Marketing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Amiko Brown</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/amikobrown.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Amiko Brown
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Marketing📚</div>
+        <p class="lead mb-4">Freshman in college looking for an internship or part-time job. I am an excellent fit for this position as I am ready and eager to learn marketing skills while taking on any required responsibilities. <br><br>
 
-        Enter bio here<br><br>
+        Skilled in areas of communication, writing, critical thinking, presenting, problem-solving, word, excel, PowerPoint, and foreign language (Japanese).<br><br>
 
-        Enter bio here
+        At my previous job with Starbucks, I generated hundreds of dollars in profit each shift by selling various amounts of drinks and students to people of all backgrounds, which helped me with my people skills.
         </p>
         <div class="social-icons">
           <a target="_blank" id="socialicon-1" href="https://linkedin.com">
@@ -77,7 +77,7 @@
           <a target="_blank" id="socialicon-3" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://drive.google.com/drive/my-drive">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +92,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Barista</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Starbucks</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Made drinks<br> 
+              • Talked to customers<br>
+              • Experience with social skills, food handeling, and drink making<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -108,10 +108,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Starbucks</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Making sure the line moved quickly<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,10 +122,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Trainer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Starbucks</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
+            • Trained new baristas<br>
             • Reviewed and graded student coding projects<br>
             • Created educational content to help promote student education<br>
             • TA'd for over 400 students each academic quarter<br>
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+              <img src="th.jpeg" width="500px">
+              <img src="ming.jpeg" width="500px"><br>
+              <img src="jii.jpeg" width="500px">
+              <img src="stap.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Amiko Brown</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
