--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="ringo.ico">
+  <link rel="shortcut icon" href="img/nami.ico">
   <meta name="description" content="Marketing Resume">
   <meta name="author" content="Abrow136">
 
@@ -61,17 +61,17 @@
         <h1 class="mb-3">Amiko Brown
         </h1>
         <div class="subheading mb-5">Marketing📚</div>
-        <p class="lead mb-4">Freshman in college looking for an internship or part-time job. I am an excellent fit for this position as I am ready and eager to learn marketing skills while taking on any required responsibilities. <br><br>
+        <p class="lead mb-4"> I am a freshman in college looking for an internship or part-time job. I am eager for a job which would allow me to learn marketing skills while taking on any required responsibilities. I have a proven track record of success in developing and executing effective marketing strategies, and I am confident that I would be a valuable asset to any team. I am skilled in areas of communication, writing, critical thinking, presenting, problem-solving, word, excel, PowerPoint, and foreign language (Japanese). One of my greatest strengths is my ability to analyze data and use it to make informed decisions about campaign optimization and future marketing strategies. I am also skilled in project management and have experience leading cross-functional teams to achieve marketing goals. <br><br>
 
-        Skilled in areas of communication, writing, critical thinking, presenting, problem-solving, word, excel, PowerPoint, and foreign language (Japanese).<br><br>
+        In my previous roles as a barista, cashier, and trainer at Starbucks Corporation, I have gained extensive experience in various fields. I generated hundreds of dollars in profit each shift by selling various amounts of drinks and students to people of all backgrounds, which helped me with my people skills. Working at Starbucks was an exciting and rewarding experience for me. As one of the world's largest coffee chains, Starbucks offers a fast-paced, dynamic work environment that helped me develop a wide range of skills and experience. At Starbucks, I started out as a barista and cashier, responsible for taking orders quickly and accurately, and making and serving coffee and other beverages to customers. This job requires a high level of attention to detail and excellent customer service skills, as you must be able to quickly and accurately prepare orders while also engaging with customers and making them feel welcome, while making sure the line moves quickly. As I gained more experience, I had the opportunity to take on additional responsibilities, such as managing inventory and supplies, and being the responsible shift manager of the store while my boss was on a break or busy. These roles require strong leadership and communication skills, as well as the ability to think on your feet and make quick decisions. Eventually I was promoted to a store trainer, using my teaching abilities to welcome and train new employees. One of the great things about working at Starbucks is the sense of community and teamwork that often develops among employees. Many Starbucks locations have a strong culture of collaboration and support, with employees working together to ensure that each shift runs smoothly and that customers are always satisfied. My work ethic and skills were acknowledged by my superiors and I was awarded the title of employee of the quarter, twice. Overall, my work experience at Starbucks provided me with valuable skills and insights that can be applied to many different industries and job roles. <br><br>
 
-        At my previous job with Starbucks, I generated hundreds of dollars in profit each shift by selling various amounts of drinks and students to people of all backgrounds, which helped me with my people skills.
+        Another job which I had was being a soccer referee. Being a soccer referee was a challenging but rewarding experience. As a referee, you play a crucial role in ensuring that games are played safely, fairly, and according to the rules. My experience as a soccer referee provided me with many valuable skills and insights that can be applied to various aspects of my life and career. One of the most important skills that I developed as a referee is the ability to make quick decisions under pressure. During a game, you must be able to assess situations quickly and make fair and accurate calls, even in high-pressure situations. This skill can be invaluable in many other aspects of life, such as in the workplace, where quick decision-making is often necessary. Another skill that I developed as a referee is the ability to communicate effectively with others. You must be able to communicate rules and decisions clearly and confidently to players, coaches, and other officials. Effective communication is also essential in many other contexts, such as in the workplace, where clear and concise communication is necessary to collaborate with coworkers and achieve common goals. As a referee, I also gained experience in conflict resolution and problem-solving. I needed to be able to handle conflicts between players, coaches, and other officials and find solutions that were fair and equitable. These skills are valuable in many other contexts, such as in the workplace, where conflict resolution is often necessary to maintain positive relationships with colleagues and achieve common goals. My experience as a soccer referee has provided me with many valuable skills and insights that can be applied to various aspects of my life and career. 
         </p>
         <div class="social-icons">
           <a target="_blank" id="socialicon-1" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/amikobrown">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" id="socialicon-3" href="https://twitter.com">
@@ -95,13 +95,14 @@
             <h3 class="mb-0">Barista</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Starbucks</a></div>
             <p>
-              • Made drinks<br> 
-              • Talked to customers<br>
-              • Experience with social skills, food handeling, and drink making<br>
+              • Attention to detail: Paying close attention to the details of each coffee order can ensure that customers receive the perfect cup of coffee every time.<br> 
+              • Time management: Ability to work efficiently during busy periods while still maintaining a high level of quality in work.<br>
+              • Creativity: Use of passion and creativity to experiment with new flavors and brewing methods, which can help keep customers coming back for more.<br>
+              • Teamwork: Ability to work well as part of a team, helping out co-workers during busy periods and communicating effectively to ensure that everyone is on the same page.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2020 - August 2022</span>
           </div>
         </div>
 
@@ -110,12 +111,14 @@
             <h3 class="mb-0">Cashier</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Starbucks</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • Making sure the line moved quickly<br>
+              • Customer service: Excellent customer service and ability to build a loyal customer base. Friendly, patient, and able to handle customer complaints and requests.<br>
+              • Multi-tasking: Ability to multitask during peak hours, taking orders, preparing drinks, and handling cash transactions all at the same time.<br>
+              • Cleanliness: Keeping a clean and organized workspace and maintaining food safety standards and providing a pleasant environment for customers.<br>
+              • Math skills: Strong math skills to accurately calculate totals, discounts, and taxes.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2020 - August 2022</span>
           </div>
         </div>
 
@@ -125,15 +128,15 @@
             <h3 class="mb-0">Trainer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Starbucks</a></div>
             <p>
-            • Trained new baristas<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Teaching skills: Ability to instruct and educate new empoyees, explaining concepts patiently and effectively.<br>
+            • Multi-tasking: Ability to multitask during peak hours, taking orders, preparing drinks, and handling cash transactions all at the same time.<br>
+            • Communication: Clear communication skills in a busy coffee shop environment. Ability to communicate effectively with customers, co-workers, and managers.<br>
+            • Coffee knowledge: Deep understanding of different coffee beans, roast levels, and brewing methods.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2021 - August 2022</span>
           </div>
         </div>
 
@@ -151,36 +154,27 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Homestead High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div>High School Graduate Degree</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2018 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Bachelor's Degree</div>
+            <div>Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2022 - June 2026</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
+
 
       </div>
     </section>
@@ -191,10 +185,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-              <img src="th.jpeg" width="500px">
-              <img src="ming.jpeg" width="500px"><br>
-              <img src="jii.jpeg" width="500px">
-              <img src="stap.jpeg" width="500px"><br>
+              <img src="img/th.jpeg" width="500px">
+              <img src="img/ming.jpeg" width="500px"><br>
+              <img src="img/jii.jpeg" width="500px">
+              <img src="img/stap.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
